<resources>
    <string name="app_name">Apphud QA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Apphud QA application</string>
    <string name="nav_header_subtitle">hi@apphud.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_customer">Customer</string>
    <string name="menu_demo">Demo</string>
    <string name="menu_paywalls">Paywalls</string>
    <string name="menu_products">Products</string>
    <string name="menu_groups">Permission groups</string>
    <string name="menu_purchases">Purchases</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_promotional">Promotional</string>
    <string name="customerTitle">User ID:</string>
    <string name="sandbox">Server:</string>
    <string name="info">Sdk:</string>
    <string name="app_version">App version:</string>
    <string name="json">Json</string>
    <string name="success">Success</string>
    <string name="purchased_at">Purchased At:</string>
    <string name="expires_at">Expires At:</string>
    <string name="status">Status:</string>
    <string name="name">Product name:</string>
    <string name="id">Product id:</string>
    <string name="price">Price:</string>
    <string name="development">Development</string>
    <string name="stage">Stage</string>
    <string name="production">Production</string>
    <string name="next">Next</string>
    <string name="user_id">User Id</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="sync_purchases">Sync purchases</string>
    <string name="is_default">Is default: </string>
    <string name="experiment">Experiment: </string>
    <string name="variation">Variation: </string>
    <string name="set_user_properties">Set user properties</string>
    <string name="apply">Apply</string>
    <string name="days">days</string>
    <string name="show_empty_paywalls">Show empty paywalls</string>
    <string name="show_empty_groups">Show empty groups</string>
    <string name="properties_name">Name</string>
    <string name="properties_email">Email</string>
    <string name="properties_cohort">Cohort</string>
    <string name="properties_phone">Phone</string>
    <string name="properties_age">Age</string>
    <string name="properties_gender">Gender</string>
    <string name="add_custom_property">Add custom property</string>
    <string name="properties_key">Key</string>
    <string name="properties_value">Value</string>
    <string name="custom_property">Custom property</string>
    <string name="apphud_property">Apphud property</string>
    <string name="error_must_be_not_empty">Must be not empty</string>
    <string name="error_please_fill">Please fill empty custom property to add new</string>
    <string name="set_once">Set once</string>
    <string name="increment">Increment</string>
    <string name="grant_promotion">Grant promotion for (days): </string>
    <string name="grant_promotion_title">Grant promotion</string>
    <string name="request_promotion">\nSKU: %s\n\nSelect the number of days:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="restore_success">Success: restored purchases count %s</string>
    <string name="integrations">Switch Integrations</string>

    <string name="facebook_app_id">2385075801820694</string>
    <string name="fb_login_protocol_scheme">fb2385075801820694</string>

    <string name="fcm_sender_id">73151043304</string>

    <string-array name="properties_types">
        <item>Name</item>
        <item>Email</item>
        <item>Cohort</item>
        <item>Phone</item>
        <item>Age</item>
    </string-array>

    <string-array name="genders_array">
        <item>- not set -</item>
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>

    <string-array name="types_array">
        <item>String</item>
        <item>Boolean</item>
        <item>Integer</item>
        <item>Float</item>
        <item>Double</item>
    </string-array>

</resources>