<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_customer" />
        <item
            android:id="@+id/nav_demo"
            android:icon="@drawable/ic_baseline_storefront_24"
            android:title="@string/menu_demo" />
        <item
            android:id="@+id/nav_purchases"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_purchases" />
        <item
            android:id="@+id/nav_paywalls"
            android:icon="@drawable/ic_baseline_storage_24"
            android:title="@string/menu_paywalls" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_baseline_apps_24"
            android:title="@string/menu_groups" />
        <item
            android:id="@+id/nav_promotional"
            android:icon="@drawable/ic_baseline_rocket_launch_24"
            android:title="@string/menu_promotional" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_logout" />
    </group>
</menu>