<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_customer">

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.apphud.app.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" >
        <action
            android:id="@+id/action_nav_customer_to_propertiesFragment"
            app:destination="@id/propertiesFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_paywalls"
        android:name="com.apphud.app.ui.paywalls.PaywallsFragment"
        android:label="@string/menu_paywalls"
        tools:layout="@layout/fragment_paywalls" >
        <action
            android:id="@+id/action_nav_paywalls_to_jsonFragment"
            app:destination="@id/jsonFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.apphud.app.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_promotional"
        android:name="com.apphud.app.ui.promotional.PromotionalFragment"
        android:label="@string/menu_promotional"
        tools:layout="@layout/fragment_promotional" />

    <fragment
        android:id="@+id/nav_purchases"
        android:name="com.apphud.app.ui.purchases.PurchasesFragment"
        android:label="@string/menu_purchases"
        tools:layout="@layout/fragment_purchases" />

    <fragment
        android:id="@+id/jsonFragment"
        android:name="com.apphud.app.ui.paywalls.JsonFragment"
        android:label="@string/json"
        tools:layout="@layout/fragment_json" >
        <argument
            android:name="json"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/propertiesFragment"
        android:name="com.apphud.app.ui.customer.PropertiesFragment"
        android:label="@string/set_user_properties"
        tools:layout="@layout/fragment_properties" />

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.apphud.app.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" >
        <argument
            android:name="paywallId"
            app:argType="string"
            android:defaultValue=""/>
    </fragment>

    <fragment
        android:id="@+id/nav_demo"
        android:name="com.apphud.app.ui.demo.DemoFragment"
        android:label="@string/menu_demo"
        tools:layout="@layout/fragment_demo" >
        <action
            android:id="@+id/action_nav_customer_to_productsFragment"
            app:destination="@id/productsFragment"/>
    </fragment>

</navigation>